--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
   <header>
-    penqin's page
+    <h1>
+      <a>penqin's page</a>
+    </h1>
   </header>
-  <footer>
-    penqin's page
-  </footer>
 </body>
 </html>
